tests/sources/invalid/borrow/borrow_alias_escape_errors.fire
// Borrowed projection alias/move escape errors

import @firescript/std.io.println;

class Box {
    name: string;
}

fn takeOwned(s: string) -> void {
    println(s);
}

fn badAliasReturn(&b: Box) -> string {
    alias: string = b.name; // Error: cannot move borrowed projection into owned local  //~ ERROR FS-SEM-0001 @23
    return alias;
}

fn badAliasPass(&b: Box) -> void {
    takeOwned(b.name); // Error: cannot move borrowed projection into owned parameter  //~ ERROR FS-SEM-0001 @17
}

bx: Box = Box("fire");
println(badAliasReturn(bx));
badAliasPass(bx);
